# boilermaker-dioxus-upgrade

./: .gitignore  Cargo.toml  README.md  package-lock.json  tailwind.sh
examples/hello-world/: boilermaker.toml
examples/hello-world/rust/: README.md
examples/hello-world/rust/src/: main.rs
examples/hello-world/rust/tests/: main.rs
examples/source_sqlite/: README.md  boilermaker_source.toml
migrations/: 20251120022133_cache.down.sql  20251120022133_cache.up.sql  20251205022516_source.down.sql  20251205022516_source.up.sql
