[workspace]
resolver = "2"
members = [
    "packages/boilermaker_api",
    "packages/boilermaker_cli",
    "packages/boilermaker_core",
    "packages/boilermaker_desktop",
    "packages/boilermaker_ui",
    "packages/boilermaker_web",
]

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
colored = "3.0.0" # TODO: pick one of colored or nu-ansi-term
dioxus = { version = "0.7.2", features = ["desktop", "html", "fullstack", "lib", "router", "ssr" ] }
dioxus-desktop = "0.7.2"
dirs = "6.0.0"
fs_extra = "1.3.0"
git2 = "0.20.2"
hex = "0.4.3"
include_dir = "0.7.4"
indoc = "2.0.6"
lazy_static = "1.5.0"
minijinja = { version = "2.12.0", features = ["loader", "speedups"] }
minijinja-autoreload = "2.11.0"
nu-ansi-term = "0.50.1"
once_cell = "1.21.3"
pulldown-cmark = "0.13.0"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tabled = "0.20.0"
# TODO: set tokio features and remove 'full'
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = [
    "json",
    "registry",
    "env-filter",
] }
unicode-truncate = { version = "2.0.0" }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"

# workspace
boilermaker_api = { path = "packages/boilermaker_api" }
boilermaker_cli = { path = "packages/boilermaker_cli" }
boilermaker_core = { path = "packages/boilermaker_core" }
boilermaker_desktop = { path = "packages/boilermaker_desktop" }
boilermaker_ui = { path = "packages/boilermaker_ui" }
